[package]
name = "rust_sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.33.0", features = ["bundled", "uuid", "chrono", "serde_json", "preupdate_hook"] }
uuid = { version = "1.12.1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
base64 = "0.22.1"
rand = "0.9.0-beta.3"
once_cell = "1.20.2"
bincode = "2.0.0-rc.3"

[lib]
crate-type = ["cdylib", "staticlib"]