[package]
name = "rust_sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32.0", features = ["bundled-sqlcipher", "uuid", "chrono", "serde_json", "preupdate_hook"] }
uuid = { version = "1.12.1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
base64 = "0.22.1"
rand = "0.9.0-beta.3"
once_cell = "1.20.2"
bincode = "2.0.0-rc.3"
log = "0.4.25"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rusqlite = { version = "0.6.0" }
anyhow = "1.0.95"
thiserror = "2.0.11"
async-trait = "0.1.85"
objc2 = "0.6.0"
objc2-foundation = "0.3.0"
lru = "0.13.0"
prometheus = "0.13.4"

[lib]
crate-type = ["cdylib", "staticlib"]